# private-link-rag-accelerator

./: .editorconfig  .eslintrc.json  .gitignore  .pre-commit-config.yaml  README.md  azure-private-link-learning-summary.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-apps.yml  deploy-infra.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.squad/: .first-run  config.json  decisions.md  routing.md  team.md
.squad/agents/dallas/: charter.md  history.md
.squad/agents/kane/: charter.md  history.md
.squad/agents/lambert/: charter.md  history.md
.squad/agents/parker/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/ripley/: charter.md  history.md  phase-2-plan.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-05-08T224914Z-phase-2a-cost-pivot-and-resume.md  2026-05-09T025751Z-phase-1-sprint-complete.md
.squad/orchestration-log/: 2026-05-08T224914Z-dallas-pr-a.md  2026-05-08T224914Z-dallas-pr-a1-attempt1.md  2026-05-08T224914Z-dallas-pr-a1-recovery.md  2026-05-08T224914Z-ripley-phase2a-v2.md  2026-05-08T224914Z-ripley-phase2a-v3.md  2026-05-09T025751Z-dallas.md  2026-05-09T025751Z-kane.md  2026-05-09T025751Z-lambert.md  2026-05-09T025751Z-parker.md  2026-05-09T025751Z-ripley.md
apps/api/: Dockerfile  pyproject.toml
apps/api/src/: __init__.py  config.py  main.py
apps/api/src/middleware/: __init__.py  error_handler.py  logging.py  request_id.py
apps/api/src/models/: __init__.py  admin.py  chat.py  citation.py  conversation.py  document.py  error.py  turn.py  user.py
apps/api/src/routers/: __init__.py  admin.py  chat.py  citations.py  conversations.py  health.py
apps/api/src/services/: __init__.py  auth.py  cosmos.py  docintel.py  llm.py  queue.py  search.py  storage.py
apps/api/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_cosmos.py  test_docintel.py  test_integration_marker.py  test_llm.py  test_search.py  test_storage.py
apps/api/tests/_shared/: __init__.py  fixtures.py
apps/api/tests/contract/: test_openapi_chat.py  test_openapi_citations.py  test_openapi_conversations.py
apps/api/tests/integration/: README.md  __init__.py  conftest.py  test_healthz_internal_only.py
apps/api/tests/unit/: test_chat_logging.py  test_llm_prompt.py
apps/ingest/: Dockerfile  pyproject.toml
apps/ingest/src/: __init__.py  config.py  events.py  logging_setup.py  main.py  pipeline.py  runs.py
apps/ingest/src/handlers/: __init__.py  shared.py
apps/ingest/src/services/: __init__.py
apps/ingest/tests/: __init__.py  conftest.py  test_handlers_shared.py  test_main.py  test_pipeline.py  test_shared_fixtures_smoke.py
apps/ingest/tests/_shared/: fixtures.py
apps/web/: .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/scripts/: generate-api-types.ts
apps/web/src/: auth.config.ts  middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(auth)/: layout.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/components/chat/: ChatClient.tsx  ChatPane.tsx  CitationChip.tsx  MessageBubble.tsx  index.ts  types.ts
apps/web/src/components/shell/: AppShell.tsx  ConversationList.tsx  LiveRegion.tsx
apps/web/src/components/ui/: .gitkeep  button.tsx  scroll-area.tsx  textarea.tsx  tooltip.tsx
apps/web/src/lib/: api.ts  auth.ts  conversations.ts  format.ts  sse.ts
apps/web/src/lib/types/: api.ts
docs/: architecture.md  cost.md  deploy.md
docs/decisions/: 0001-aca-over-app-service.md  0002-cosmos-nosql-over-postgres.md  0003-gpt5-over-gpt4o.md  0004-integrated-vectorization.md  0005-single-search-index-with-scope-filter.md  0006-bastion-with-jumpbox-for-vnet-access.md  0007-avm-where-possible.md
infra/: AVM-AUDIT.md  README.md  main.bicep  main.parameters.dev.json  main.parameters.prod.json
infra/modules/apim/: README.md  main.bicep
infra/modules/bastion/: README.md  jumpbox.bicep  main.bicep
infra/modules/containerapps/: README.md  main.bicep
infra/modules/cosmos/: README.md  main.bicep
infra/modules/docintel/: README.md  main.bicep
infra/modules/identity/: README.md  main.bicep
infra/modules/keyvault/: README.md  main.bicep
infra/modules/monitoring/: README.md  main.bicep
infra/modules/network/: README.md  main.bicep
infra/modules/openai/: README.md  main.bicep
infra/modules/registry/: README.md  main.bicep
infra/modules/search/: README.md  main.bicep
infra/modules/storage/: README.md  main.bicep
infra/search/: README.md  kb-index.json
infra/tests/: README.md  _helpers.ps1  run-all.ps1  test_compile.ps1  test_dns_zones.ps1  test_no_public_endpoints.ps1  test_no_shared_keys.ps1  test_teardown.ps1  test_what_if_idempotent.ps1
infra/tests/_lib/: azd-helpers.ps1
samples/: README.md  ai-search-deployment-guide.docx  generate.py  rag-architecture-notes.txt
scripts/: postprovision.ps1  preflight.ps1  preflight.sh
specs/001-private-rag-accelerator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-private-rag-accelerator/checklists/: requirements.md
specs/001-private-rag-accelerator/contracts/: api-openapi.yaml  cosmos-conversations.json  cosmos-documents.json  ingestion-event.schema.json
(+4 files in other folders)
