[project]
name = "rag-api"
version = "0.1.0"
description = "FastAPI orchestrator for the Private RAG Accelerator"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Azure SDKs (managed identity, no shared keys)
    "azure-identity>=1.19.0",
    "azure-cosmos>=4.9.0",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.24.0",
    "azure-ai-documentintelligence>=1.0.0",
    
    # Azure OpenAI via openai SDK
    "openai>=1.55.0",
    
    # Observability
    "azure-monitor-opentelemetry>=1.6.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.4.0",

    # Multipart uploads (used in later phases for /uploads)
    "python-multipart>=0.0.18",
    
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require deployed Azure resources",
    "isolation: marks tests verifying cross-user isolation (SC-011)",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
